tests/baselines/reference/es2020IntlAPIs.errors.txt
es2020IntlAPIs.ts(31,1): error TS2554: Expected 1-2 arguments, but got 0.


==== es2020IntlAPIs.ts (1 errors) ====
    // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl#Locale_identification_and_negotiation
    const count = 26254.39;
    const date = new Date("2012-05-24");
    
    function log(locale: string) {
      console.log(
        `${new Intl.DateTimeFormat(locale).format(date)} ${new Intl.NumberFormat(locale).format(count)}`
      );
    }
    
    log("en-US");
    // expected output: 5/24/2012 26,254.39
    
    log("de-DE");
    // expected output: 24.5.2012 26.254,39
    
    // https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Intl/RelativeTimeFormat
    const rtf1 = new Intl.RelativeTimeFormat('en', { style: 'narrow' });
    
    console.log(rtf1.format(3, 'quarter'));
    //expected output: "in 3 qtrs."
    
    console.log(rtf1.format(-1, 'day'));
    //expected output: "1 day ago"
    
    const rtf2 = new Intl.RelativeTimeFormat('es', { numeric: 'auto' });
    
    console.log(rtf2.format(2, 'day'));
    //expected output: "pasado mañana"
    
    new Intl.Locale(); // should error
    ~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1-2 arguments, but got 0.
!!! related TS6210 lib.es2020.intl.d.ts:--:--: An argument for 'tag' was not provided.
    new Intl.Locale(new Intl.Locale('en-US'));
    